--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -110,6 +110,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\lib\materialize\materialize.css" />
+    <Content Include="Content\src\Home.css" />
     <Content Include="Content\src\Necesidad.css" />
     <Content Include="Content\src\alert.css" />
     <Content Include="Content\src\card.css" />
@@ -130,6 +131,7 @@
     <Content Include="Scripts\lib\toast\toast.js" />
     <Content Include="Scripts\src\CrearNecesidad.js" />
     <Content Include="Scripts\src\datepicker.js" />
+    <Content Include="Scripts\src\Home.js" />
     <Content Include="Scripts\src\progressbar.js" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -168,6 +170,7 @@
     <Content Include="Views\Home\Ingresar.cshtml" />
     <Content Include="Views\Home\Bienvenido.cshtml" />
     <Content Include="Views\Home\_InicioLayout.cshtml" />
+    <Content Include="Views\Home\pv_Buscador.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
