--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -110,6 +110,8 @@
     <Compile Include="Repository\NecesidadRepository.cs" />
     <Compile Include="Repository\RegistrarseRepository.cs" />
     <Compile Include="Repository\PerfilRepository.cs" />
+    <Compile Include="ViewModels\NecesidadDonacionMonetaria.cs" />
+    <Compile Include="ViewModels\NecesidadDonacionInsumo.cs" />
     <Compile Include="ViewModels\NecesidadCreacion.cs" />
     <Compile Include="ViewModels\Referencia.cs" />
     <Compile Include="ViewModels\UsuarioIngresar.cs" />
