--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -51,7 +51,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ORM\Comentarios.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="ORM\Denuncias.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ORM\DenunciasEstado.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="ORM\DonacionesInsumos.cs">
@@ -60,7 +66,7 @@
     <Compile Include="ORM\DonacionesMonetarias.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
-    <Compile Include="ORM\DonacionTipo.cs">
+    <Compile Include="ORM\DonacionesTipo.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="ORM\Model.Context.cs">
@@ -88,6 +94,9 @@
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="ORM\NecesidadesDonacionesMonetarias.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ORM\NecesidadesEstado.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="ORM\NecesidadesReferencias.cs">
