--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -52,9 +52,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ORM\Comentarios.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
     <Compile Include="ORM\Denuncias.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
@@ -153,6 +150,7 @@
     <Content Include="Docs\SQL\DDL\db-esquema-v5.sql" />
     <Content Include="Docs\SQL\DDL\db-esquema-v6.sql" />
     <Content Include="Docs\SQL\DDL\db-esquema-v7.sql" />
+    <Content Include="Docs\SQL\DDL\db-esquema-v9.sql" />
     <Content Include="Docs\SQL\DDL\Denuncias-v2.sql" />
     <Content Include="Docs\SQL\DDL\Denuncias-v1.sql" />
     <Content Include="Docs\SQL\DDL\DenunciasComentario-v2.sql" />
@@ -161,6 +159,7 @@
     <Content Include="Docs\SQL\DDL\DonacionesTipo.sql" />
     <Content Include="Docs\SQL\DDL\NecesidadesEstado.sql" />
     <Content Include="Docs\SQL\DDL\UsuariosTipo.sql" />
+    <Content Include="Docs\SQL\MDL\DatosPruebaInsert.sql" />
     <Content Include="Docs\SQL\MDL\DenunciaEstadoInsert.sql" />
     <Content Include="Docs\SQL\MDL\DonacionesTipoInsert.sql" />
     <Content Include="Docs\SQL\MDL\MotivoDenunciaInsert.sql" />
